fixed display bug for too big nums and decimals

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: rgb(235, 235, 235);
-  font-family: "Courier New", Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
